ref: use pe version